--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,56 +1,55 @@
-
-<div *ngIf="successRegister">
-    <p> Registration successful! Please log in using your credentials. </p>
-</div>
-
-<div  *ngIf="!_UserService.token && !registerNewUser">
-    <h1>Log In</h1>
+<div class="login-body">
+  <div *ngIf="!_UserService.token && !registerNewUser" class="display-group">
     <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()">
-        <div>
-            <label>Username: </label>
-            <input type="text" formControlName="username" placeholder="Username">
-        </div>
-        <div>
-            <label>Password: </label>
-            <input type="text" formControlName="password" placeholder="Password">
-        </div>
-        <button class="modal-bttn" type="submit">
-            Log In
-        </button>
+      <div class="field">
+        <input type="text" formControlName="username" />
+        <label>USERNAME </label>
+      </div>
+      <div class="field">
+        <input type="text" formControlName="password" />
+        <label>PASSWORD </label>
+      </div>
+      <button class="action-bttn" type="submit">
+        LOG IN
+      </button>
     </form>
 
-    <button (click)="renderSignUp()" class="modal-bttn">
-        New User? Sign Up Here!
+    <button (click)="renderSignUp()" class="action-link">
+      NEW USERS REGISTER HERE
     </button>
-</div>
+  </div>
 
-<!-- register new users -->
-<div *ngIf="registerNewUser">
-        <h1>Sign Up as a New User</h1>
-        <form [formGroup]="signUpForm" (ngSubmit)="onSignupSubmit()">
-        <div>
-            <label>Username: </label>
-            <input type="text" formControlName="username" placeholder="Username">
-        </div>
-        <div>
-            <label>Request Additional Permissions? </label>
-            <input type="checkbox" formControlName="username">
-        </div>
-        <div>
-            <label>Password: </label>
-            <input type="text" formControlName="password" placeholder="Password">
-        </div>
-        <div>
-            <label>Re-enter Password: </label>
-            <input type="text" formControlName="password_check" placeholder="Password Again">
-        </div>
-        <button class="modal-bttn" type="submit">
-            Sign Up
-        </button>
+  <!-- register new users -->
+  <div *ngIf="successRegister">
+    <p>Registration successful! Please log in using your credentials.</p>
+  </div>
+
+  <div *ngIf="registerNewUser">
+    <h1>Sign Up as a New User</h1>
+    <form [formGroup]="signUpForm" (ngSubmit)="onSignupSubmit()">
+      <div>
+        <label>Username: </label>
+        <input type="text" formControlName="username" placeholder="Username" />
+      </div>
+      <div>
+        <label>Request Additional Permissions? </label>
+        <input type="checkbox" formControlName="username" />
+      </div>
+      <div>
+        <label>Password: </label>
+        <input type="text" formControlName="password" placeholder="Password" />
+      </div>
+      <div>
+        <label>Re-enter Password: </label>
+        <input
+          type="text"
+          formControlName="password_check"
+          placeholder="Password Again"
+        />
+      </div>
+      <button class="action-bttn" type="submit">
+        SIGN UP
+      </button>
     </form>
-
-
-    </div>
-
-
-
+  </div>
+</div>
