--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css?family=Poppins:100,400,400i,700&display=swap");
+
+// base fonts
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,300,400,400i,700&display=swap");
+
+// fancy font
 @import url("https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap");
+
+// other scss modules
 @import "src/more-sass/_variables.scss";
 @import "../node_modules/rfs/scss";
 
@@ -10,7 +16,7 @@
 body,
 html {
   height: 100%;
-  margin: 0 auto;
+  margin: 0 0;
 }
 
 body {
@@ -59,9 +65,6 @@ button:disabled {
 
 .modal-bttn {
   @include cute-button();
-  @include sm {
-    width: 100%;
-  }
 }
 
 .fancy {
