--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -62,6 +62,6 @@ nav {
   height: $logoHeight;
   z-index: $navZ + 1000;
   background-color: $accentColorDark;
-  border: 1px solid red;
+  border: 1px solid grey;
   align-content: center;
 }
