--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,7 +7,7 @@ $textColor: $white;
   height: 100vh;
   align-items: flex-end;
   justify-content: flex-end;
-  background-color: $accentColorDark;
+  background-color: $accentColor;
   color: $textColor;
 }
 
@@ -50,6 +50,7 @@ $actionWidth: 5rem;
   display: flex;
   flex-direction: column;
   margin-top: 0.8rem;
+  text-shadow: $textShadow;
 
   &:hover input,
   &:focus input {
@@ -67,6 +68,7 @@ $actionWidth: 5rem;
     outline: none;
     border: none;
     border-bottom: 1px solid $textColor;
+    color: white;
     //direction: RTL;
   }
 
