--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -17,7 +17,7 @@ $textColor: $white;
   font-size: 1rem;
   width: 60vw;
   margin-right: 1rem;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -79,5 +79,18 @@ $actionWidth: 5rem;
 
   label {
     text-align: right;
+  }
+}
+
+.checkbox-field {
+  text-align: right;
+  margin-top: 1rem;
+}
+
+.success-message {
+  text-align: right;
+  width: 7rem;
+  span {
+    font-size: 0.5rem;
   }
 }
