--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,26 +1,32 @@
-<p>User Profile</p>
-<p>User Name</p>
-<a class="request-link" routerLink="/Home">Make a new Service Request </a>
-<button (click)="refreshToken()" class="modal-bttn" >Refresh Token</button>
-<button routerLink="/login" (click)="logout()" class="modal-bttn" >Log Out</button>
+<div class="profile-body">
+  <div class="user-info">
+    <div>YOU ARE LOGGED IN AS</div>
+    <div class="username">User Name</div>
+    <div class="after-username">
+      <div>STATUS: ADMIN</div>
+      <div>YOUR LOGIN EXPIRES IN 30:00</div>
+      <button class="action-link" (click)="refreshToken()">
+        REFRESH LOGIN
+      </button>
+      <a routerLink="/Home">
+        <div class="regular-link">
+          MAKE NEW SERVICE REQUEST
+        </div>
+      </a>
+      <button class="action-link" routerLink="/login" (click)="logout()">
+        LOG OUT
+      </button>
+    </div>
+  </div>
 
-<p> Your Service Requests</p>
-
-<div class="tb-overflow">
-    <table>
-            <tr>
-                <th>Time </th>
-                <th>Request ID </th>
-                <th>Location </th>
-                <th>Complaint Title</th> 
-                <th>Status</th>
-            </tr>
-            <tr *ngFor="let a_request of u_request">
-                    <td>{{ a_request.time_sent }}</td>
-                    <td>{{ a_request.request_id }}</td>
-                    <td>{{ a_request.location }}</td>
-                    <td>{{ a_request.title }}</td>
-                    <td>{{ a_request.status }}</td>
-            </tr> 
-        </table>
+  <div class="user-requests">
+    <div class="spacer"></div>
+    <div class="user-requests-data">
+      <ul>
+        <li *ngFor="let req of u_request">
+          some interesting data :)
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
