--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -49,7 +49,8 @@ $userInfoHeight: 21vh;
   display: flex;
   justify-content: space-between;
   padding: 1rem 2rem;
-  border-bottom: 3px solid yellowgreen;
+  padding-bottom: 0;
+  //border-bottom: 3px solid yellowgreen; -- change color when dispplay not present
   align-items: center;
 }
 
@@ -66,6 +67,7 @@ $userInfoHeight: 21vh;
 
 .display-sometimes {
   //display: none;
-  background-color: blueviolet;
-  padding: 2rem 2rem;
+  background-color: green;
+  padding: 0 2rem;
+  padding-bottom: 2rem;
 }
