--- a/src/more-sass/_variables.scss
+++ b/src/more-sass/_variables.scss
@@ -1,7 +1,7 @@
 // @import 'src/more-sass/_variables.scss'; --> copy this link  to other files
 
 // coooolors
-$primaryColor: lightblue;
+$primaryColor: #bad2ec;
 $primaryColorHover: adjust-color($primaryColor, $lightness: -20);
 $secondColor: rgb(60, 146, 175);
 $darkColor: rgb(14, 10, 90);
