--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -30,10 +30,10 @@
                 <div class="complaint-title">
                   {{ req.title }}
                 </div>
+                <div>REQUEST ID: {{ req.request_id }}</div>
                 <div>{{ req.location | uppercase }}</div>
                 <div>JULY 18, 2019 - 8:30 AM</div>
                 <div>STATUS: PENDING</div>
-                <div>REQUUEST ID: {{ req.request_id }}</div>
               </div>
               <button (click)="dropdown()">
                 <div id="{{ i }}" class="toggle-dropdown"></div>
