--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -63,10 +63,7 @@ li:nth-of-type(2n - 1) {
 }
 
 .toggle-dropdown {
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  border: 10px solid $accentColorDark;
+  @include dropdown-button;
 }
 
 .display-sometimes {
