--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -24,25 +24,7 @@
     <div class="user-requests-data">
       <ul>
         <li *ngFor="let req of user_request; let i = index">
-          <div class="request-displays">
-            <div class="display-always">
-              <div class="text">
-                <div class="complaint-title">
-                  {{ req.title }}
-                </div>
-                <div>REQUEST ID: {{ req.request_id }}</div>
-                <div>{{ req.location | uppercase }}</div>
-                <div>JULY 18, 2019 - 8:30 AM</div>
-                <div>STATUS: PENDING</div>
-              </div>
-              <button (click)="dropdown()">
-                <div id="{{ i }}" class="toggle-dropdown"></div>
-              </button>
-            </div>
-            <div class="display-sometimes">
-              {{ req.complaint }}
-            </div>
-          </div>
+          <app-show-requests [req]="req"></app-show-requests>
         </li>
       </ul>
     </div>
