--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,10 +48,9 @@ button {
   font: inherit;
   color: inherit;
   background-color: transparent;
-  width: 100%;
-  height: 100%;
   cursor: pointer;
   width: min-content;
+  height: min-content;
 }
 
 button:disabled {
