--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -34,7 +34,7 @@
       <br />
       <a
         *ngIf="_UserService.currentUserValue.is_staff"
-        routerLink="/ViewRequest"
+        routerLink="/ProfileAdmin"
         >Review All Requests</a
       >
       <br />
