--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -32,18 +32,6 @@
 }
 
 .user-requests {
-  max-width: 100vw;
-  height: 100vh;
+  @include requests;
   padding-top: calc(#{$userInfoHeight} + #{$navHeaderHeight});
-}
-
-.user-requests-data {
-  ul {
-    padding: 0;
-  }
-}
-
-li:nth-of-type(2n - 1) {
-  background-color: $primaryColor;
-  color: white;
 }
