--- a/src/app/show-requests/show-requests.component.html
+++ b/src/app/show-requests/show-requests.component.html
@@ -1,4 +1,4 @@
-<div class="request-displays">
+<div class="request-display">
   <div class="display-always">
     <div class="text">
       <div class="complaint-title">
@@ -7,13 +7,16 @@
       <div>REQUEST ID: {{ req.request_id }}</div>
       <div>{{ req.location | uppercase }}</div>
       <div>JULY 18, 2019 - 8:30 AM</div>
-      <div>STATUS: PENDING</div>
+      <div>STATUS: {{ req.status }}</div>
+      <div *ngIf="req.author">AUTHOR: {{ req.author }}</div>
     </div>
     <button (click)="dropdown()">
-      <div id="{{ i }}" class="toggle-dropdown"></div>
+      <div class="toggle-dropdown"></div>
     </button>
   </div>
-  <div class="display-sometimes">
-    {{ req.complaint }}
+  <div [attr.id]="'button' + id">
+    <div class="display-sometimes">
+      {{ req.complaint }}
+    </div>
   </div>
 </div>
