--- a/src/app/show-requests/show-requests.component.scss
+++ b/src/app/show-requests/show-requests.component.scss
@@ -1,6 +1,8 @@
 @import "src/more-sass/_variables.scss";
 // show requests body??
-
+.request-display {
+  font-size: 0.7rem;
+}
 .display-always {
   display: flex;
   justify-content: space-between;
