--- a/src/app/profile-admin/profile-admin.component.scss
+++ b/src/app/profile-admin/profile-admin.component.scss
@@ -14,9 +14,11 @@
   padding-bottom: 1rem;
 }
 
+$actionBarItemWidth: 4rem;
+
 .action-bar-item {
   padding: 0 0.1rem;
-  width: 4rem;
+  width: $actionBarItemWidth;
 
   ul {
     padding: 0;
@@ -69,6 +71,10 @@
   width: min-content;
 }
 
+.query-button {
+  width: $actionBarItemWidth;
+  text-align: left;
+}
 .all-requests {
   @include requests;
 }
