--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -30,7 +30,7 @@
       </div>
       <a routerLink="/Profile"> View Your Requests</a>
       <br />
-      <a routerLink="/Home">Make A Request</a>
+      <a routerLink="/MakeRequestHome">Make A Request</a>
       <br />
       <a
         *ngIf="_UserService.currentUserValue.is_staff"
