--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,40 +1,21 @@
-@import 'src/more-sass/_variables.scss';
+@import "src/more-sass/_variables.scss";
 
-$border-radius: 10%;
+.home-body {
+  @include container;
+  justify-content: center;
+  margin-top: -3rem;
 
-.plant-select{
-    background-color: $primaryColor;
-    height: 8rem;
-    border-radius: $border-radius;
-    display: flex;
-    align-items: center;
-    margin: 4em auto;
-    width: 80%;
-    text-align: center;
-    padding: 1rem;
-
-    a {
-        color: white;
-        text-align: center;
-        width: 100%;
-        height: 100%;
-        padding: 0.2rem;
-        border-radius: $border-radius;
-        display: flex;
-        align-items: center;
-
-        &:hover {
-            background-color: $secondColor;
-        }
-
-        p {
-            text-align: center;
-            width: 100%;
-        }
-    }
-
+  h1 {
+    @include fancy-font;
+  }
 }
 
-.request-link {
-    @include cute-link();
+.plant-select {
+  @include cute-button;
+  text-align: center;
+  margin: 0 1rem;
+  margin-bottom: 2rem;
+  a {
+    color: $white;
+  }
 }
