--- a/src/app/plant-select/plant-select.component.scss
+++ b/src/app/plant-select/plant-select.component.scss
@@ -1,31 +1,38 @@
-@import 'src/more-sass/_variables.scss';
-$border-radius: 5%;
+@import "src/more-sass/_variables.scss";
+.plant-select-body {
+  @include container;
 
-.location-select{
-    background-color: $primaryColor;
-    padding: 1em 1em;
-    margin: 0 2rem;
-    border-radius: $border-radius;
+  h1 {
+    @include fancy-font;
+  }
+}
 
-    li {
-        background-color: $secondColor;
-        margin: 1em;
-        color: white;
-        text-align: center;
-        border-radius: 10%;
+.location-select {
+  background-color: $primaryColor;
+  padding: 1em 1em;
+  margin: 0 2rem;
+  height: 50vh;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: inset $boxShadow;
 
-        button {
-            padding: 1em;
-            border-radius: $border-radius;
+  li {
+    margin-bottom: 3rem;
+    width: 100%;
+  }
 
-            &:hover {
-                background-color: $secondColor + 30;
-            }
-        }
-    } 
+  button {
+    width: 100%;
+    height: fit-content;
+  }
 
+  .location-link {
+    @include cute-button($darkColor);
+  }
 }
 
 .close-bttn {
-    @include cute-button();
+  @include cute-button();
 }
